--- a/config_example.ini
+++ b/config_example.ini
@@ -3,7 +3,7 @@
 [DEFAULT]
 merchant_account =
 checkout_apikey =
-origin_key =
+client_key =
 checkout_payment_methods_url = https://checkout-test.adyen.com/v51/paymentMethods
 checkout_payments_url = https://checkout-test.adyen.com/v51/payments
 checkout_detail_url = https://checkout-test.adyen.com/v51/payments/details
