Switched to Adyen Python API Library. Removed requests library usage. Updated Checkout Script to 3.13.0. Updated Readme and improvements to ClientKey usage

--- a/config_example.ini
+++ b/config_example.ini
@@ -3,7 +3,4 @@
 [DEFAULT]
 merchant_account =
 checkout_apikey =
-origin_key =
-checkout_payment_methods_url = https://checkout-test.adyen.com/v52/paymentMethods
-checkout_payments_url = https://checkout-test.adyen.com/v52/payments
-checkout_detail_url = https://checkout-test.adyen.com/v52/payments/details
+client_key =
