--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: adyen-examples/adyen-testing-suite
+          ref: main
           path: './adyen-testing-suite'
 
   e2e-tests:
