--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,18 +10,11 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
-      - name: Checkout adyen-testing-suite
-        uses: actions/checkout@v2
-        with:
-          repository: adyen-examples/adyen-testing-suite
-          ref: main
-          path: './adyen-testing-suite'
+      - name: Build image (application)
+        run: docker build -t test-image:latest .
+      - name: Start container (application)
+        run: docker run --rm -d --name test-image -p 8080:8080 -e ADYEN_API_KEY=${{ secrets.ADYEN_API_KEY }} -e ADYEN_MERCHANT_ACCOUNT=${{ secrets.ADYEN_MERCHANT_ACCOUNT }} -e ADYEN_CLIENT_KEY=${{ secrets.ADYEN_CLIENT_KEY }} -e ADYEN_HMAC_KEY=${{ secrets.ADYEN_HMAC_KEY }} test-image:latest
+      - name: Run testing suite
+        run: docker run --rm -it --name adyen-testing-suite --network host --platform linux/arm64/v8 ghcr.io/adyen-examples/adyen-testing-suite:latest
 
-  e2e-tests:
-    runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/setup-node@v1
-      - uses: microsoft/playwright-github-action@v1
-      - name: Install dependencies and run tests
-        run: npm install && npx playwright test adyen-testing-suite
