--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,8 +4,18 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - .gitignore
+      - .gitpod.yml
+      - LICENSE
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - .gitignore
+      - .gitpod.yml
+      - LICENSE
 
 jobs:
   checkout:
