--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,19 @@ name: Build
 
 on:
   push:
+    branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - .gitignore
+      - .gitpod.yml
+      - LICENSE
   pull_request:
-    branches: [ master ]
-
+    branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - .gitignore
+      - .gitpod.yml
+      - LICENSE
 jobs:
   build:
 
