--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v3
       - name: Build image (application)
-        run: docker build -t test-image-v6:latest
+        run: docker build -t test-image-v6:latest .
       - name: Start container (application)
         run: docker run --rm -d --name test-image-v6 -p 8080:8080 -e ADYEN_API_KEY="${{ secrets.ADYEN_API_KEY }}" -e ADYEN_MERCHANT_ACCOUNT=${{ secrets.ADYEN_MERCHANT_ACCOUNT }} -e ADYEN_CLIENT_KEY=${{ secrets.ADYEN_CLIENT_KEY }} -e ADYEN_HMAC_KEY=${{ secrets.ADYEN_HMAC_KEY }} test-image-v6:latest
       - name: Run testing suite
